fix: adjust cover height for small screen; project page not showing content in small screen

--- a/src/components/Cover/Cover.css
+++ b/src/components/Cover/Cover.css
@@ -145,15 +145,15 @@
 
 @media (max-width: 480px) {
   .cover {
-    height: 54vh;
+    height: 54vw;
   }
 
   .logo {
-    font-size: 30px;
+    display: none;
   }
 
   .cover-title {
-    font-size: 6vh;
+    font-size: 7vw;
   }
 
   .down {
